# kobako

./: .gitignore  .release-please-manifest.json  .rubocop.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Gemfile  README.md  ROADMAP.md  Rakefile  SECURITY.md  SPEC.md  Steepfile  kobako.gemspec  rbs_collection.lock.yaml  release-please-config.json  rust-toolchain.toml
.claude/: settings.json
.github/: dependabot.yml
.powerloop/: 2026-05-08-spec-impl.note.md  2026-05-08-spec-init.note.md  2026-05-11-rubocop-cleanup.note.md
benchmark/: README.md  catalog_handler.rb  catalog_handles.rb  codec.rb  cold_start.rb  dispatch_glue.rb  handle_table.rb  memory.rb  mruby_eval.rb  preload_dispatch.rb  regexp.rb  rpc_roundtrip.rb  transport_roundtrip.rb  yield_roundtrip.rb
build_config/: onigmo.rb  wasi.rb
crates/: Cargo.toml
crates/kobako/: CHANGELOG.md  Cargo.toml  README.md
crates/kobako-codec/: CHANGELOG.md  Cargo.toml  README.md
crates/kobako-codec/src/: codec.rs  lib.rs  outcome.rs  transport.rs
crates/kobako-codec/src/codec/: decoder.rs  encoder.rs  error.rs  value.rs
crates/kobako-codec/src/outcome/: panic.rs
crates/kobako-codec/src/transport/: block.rs  request.rs  response.rs  run.rs
crates/kobako-parity/: Cargo.toml
crates/kobako-parity/src/: main.rs
crates/kobako-runtime/: CHANGELOG.md  Cargo.toml  README.md
crates/kobako-runtime/src/: dispatch.rs  error.rs  lib.rs  profile.rs  runtime.rs  snapshot.rs  yielder.rs
crates/kobako-wasmtime/: CHANGELOG.md  Cargo.toml  README.md
crates/kobako-wasmtime/src/: ambient.rs  cache.rs  capture.rs  config.rs  dispatch.rs  driver.rs  exports.rs  frames.rs  guest_mem.rs  instance_pre.rs  invocation.rs  lib.rs  trap.rs
crates/kobako/src/: block.rs  catalog.rs  dispatch.rs  error.rs  extension.rs  handles.rs  host_object.rs  lib.rs  member.rs  outcome.rs  receiver.rs  sandbox.rs  snippet.rs  yielder.rs
crates/kobako/tests/: install.rs
docs/: anchor-coverage.md  behavior.md  extensions.md  json.md  parity.md  regexp.md  releasing.md  security-model.md  security.md  variants.md  wire-codec.md  wire-contract.md
examples/plugin-rs/: Cargo.toml  README.md
examples/plugin-rs/src/: main.rs
examples/rust-host/: Cargo.toml  README.md
examples/rust-host/src/: lib.rs  report.rs
examples/wire-rs/: Cargo.toml  README.md
examples/wire-rs/src/: main.rs
ext/kobako/: Cargo.toml  extconf.rb
ext/kobako/src/: lib.rs  runtime.rs  snapshot.rs  wasm.rs
ext/kobako/src/contract/: dispatch.rs  error.rs  mod.rs  runtime.rs  snapshot.rs  yielder.rs
ext/kobako/src/runtime/: ambient.rs  bridge.rs  cache.rs  capture.rs  config.rs  dispatch.rs  driver.rs  errors.rs  exports.rs  frames.rs  guest_mem.rs  host_state.rs  instance.rs  instance_pre.rs  invocation.rs  trap.rs
ext/kobako/src/wasm/: cache.rs  dispatch.rs  host_state.rs  instance.rs
lib/: kobako.rb
sig/: kobako.rbs
tasks/: anchor_coverage.rake  anchors.rake  benchmark.rake  benchmark_regexp.rake  coverage.rake  crates.rake  hotspots.rake  (+8 more)
wasm/: Cargo.toml
wasm/kobako/: CHANGELOG.md  Cargo.toml  README.md
wasm/kobako-baker/: CHANGELOG.md  Cargo.toml  README.md
wasm/kobako-baker/src/: lib.rs  main.rs
wasm/kobako-core/: CHANGELOG.md  Cargo.toml  README.md
wasm/kobako-core/src/: abi.rs  codec.rs  frames.rs  guest.rs  lib.rs  outcome.rs  transport.rs
wasm/kobako-core/src/abi/: outcome_buffer.rs
wasm/kobako-core/src/transport/: block.rs  proxy.rs
wasm/kobako-io/: CHANGELOG.md  Cargo.toml  README.md
wasm/kobako-io/src/: io.rs  kernel.rs  kernel_ext.rs  lib.rs
wasm/kobako-json/: CHANGELOG.md  Cargo.toml  README.md
wasm/kobako-json/src/: convert.rs  errors.rs  json.rs  lib.rs
wasm/kobako-mruby/: CHANGELOG.md  Cargo.toml  README.md  build.rs
wasm/kobako-mruby-sys/: Cargo.toml  build.rs
wasm/kobako-mruby-sys/src/: array.rs  ccontext.rs  class.rs  convert.rs  hash.rs  io.c  lib.rs  state.rs  value.c  value.rs  wrapper.h
wasm/kobako-mruby-sys/src/state/: args.rs  define.rs  factory.rs  load.rs  protect.rs  symbol.rs
wasm/kobako-mruby/src/: flows.rs  lib.rs  runtime.rs
wasm/kobako-mruby/src/flows/: boot.rs  eval.rs  mrb_slot.rs  run.rs  snippets.rs  yield_block.rs
wasm/kobako-mruby/src/runtime/: block_stack.rs  bridges.rs  codec_convert.rs  init.rs
wasm/kobako-regexp/: CHANGELOG.md  Cargo.toml  README.md
wasm/kobako-regexp/src/: errors.rs  kernel_ext.rs  lib.rs  matchdata.rs  regexp.rs  string_ext.rs  translate.rs
wasm/kobako-regexp/src/regexp/: globals.rs  render.rs  replace.rs
wasm/kobako-wasm/: Cargo.toml  build.rs
wasm/kobako-wasm/mrblib/: io.rb  kernel.rb
wasm/kobako-wasm/src/: abi.rs  boot.rb  boot.rs  envelope.rs  guest.rs  kobako.rs  lib.rs  mrb_exc_helper.c  mruby.rs  mruby_helpers.rs  mruby_sys.rs  outcome.rs  rpc.rs  rpc_client.rs  transport.rs  yield_response.rs
wasm/kobako-wasm/src/abi/: block_stack.rs  boot.rs  dispatch_wrapper.rb  eval.rs  frames.rs  mrb_slot.rs  outcome_buffer.rs  run.rs  snippets.rs  yield_block.rs
wasm/kobako-wasm/src/codec/: mod.rs
wasm/kobako-wasm/src/kobako/: bridges.rs  bytecode.rs  codec_convert.rs  install.rs  io.rs  wire_convert.rs
wasm/kobako-wasm/src/mruby/: bytecode.c  ccontext.rs  exc.c  io.c  state.rs  sys.rs  value.c  value.rs
wasm/kobako-wasm/src/rpc/: client.rs  envelope.rs
wasm/kobako-wasm/src/transport/: block.rs  envelope.rs  proxy.rs  request.rs  response.rs
wasm/kobako/src/: flows.rs  lib.rs  runtime.rs
wasm/kobako/src/flows/: boot.rs  eval.rs  mrb_slot.rs  run.rs  snippets.rs  yield_block.rs
wasm/kobako/src/runtime/: block_stack.rs  bridges.rs  codec_convert.rs  init.rs  install.rs
wasm/mruby/: Cargo.toml
wasm/mruby-sys/: Cargo.toml  build.rs
wasm/mruby-sys/src/: array.rs  ccontext.rs  class.rs  lib.rs  value.rs  wrapper.h
wasm/mruby-sys/src/state/: args.rs  factory.rs  load.rs  protect.rs  symbol.rs
wasm/mruby/src/: array.rs  ccontext.rs  class.rs  convert.rs  hash.rs  lib.rs  state.rs  value.rs
wasm/mruby/src/state/: args.rs  define.rs  factory.rs  load.rs  protect.rs  symbol.rs
wasm/test-guest/: Cargo.toml
wasm/test-guest/src/: lib.rs
(+569 files in other folders)
