# This Cargo.toml is here to let externals tools (IDEs, etc.) know that this is
# a Rust project. Your extensions dependencies should be added to the Cargo.toml
# in the ext/ directory.

[workspace]
members = ["./ext/kobako"]
# `wasm/` is a sibling workspace (kobako-wasm crate) compiled for
# wasm32-wasip1; excluding it keeps the host (wasmtime) and guest
# dependency graphs separate.
exclude = ["wasm", "vendor"]
resolver = "2"

# Strip the local-symbol table from the shipped ext (~22% of the binary).
# Guest wasm backtraces and Rust panic locations don't depend on it; for
# native-crash debugging rebuild with `RB_SYS_CARGO_PROFILE=dev`.
[profile.release]
strip = true
