# crates/ sub-workspace.
#
# Native host-side crates: the pieces of the kobako host that function
# on the host (or both) side of the wasm boundary, isolated from the
# root workspace (the Ruby ext) and the `wasm/` guest workspace so each
# dependency graph stays separate. The repo-root `Cargo.toml` excludes
# `crates`, so the Ruby ext consumes members as plain path dependencies.
#
# Packaging rule: this workspace manifest and its `Cargo.lock` do NOT
# ship in the Ruby gem — the gem carries only the ext's path-dependency
# closure, whose members resolve there as standalone packages. Member
# manifests must therefore stay self-contained: no `workspace = true`
# inheritance fields.
#
# Members
# -------
#   * `kobako` — the Rust host SDK (bare-name crate, unpublished until
#     its release wiring lands): `Sandbox` over the contract below,
#     carrying the Ruby-parity behavior glue (Service dispatch,
#     Handles, snippet replay, seal-once).
#   * `kobako-codec` — portable wire tier (publishable rlib): the
#     MessagePack wire codec and SPEC envelope value objects shared by
#     both sides of the wasm boundary; the guest crates in `wasm/`
#     consume it as a cross-workspace path dependency.
#   * `kobako-runtime` — engine-neutral host runtime contract
#     (publishable rlib): the `Runtime` / `DispatchHandler` / `Yielder`
#     traits and the neutral value types an engine implementation and a
#     host frontend meet on.
#   * `kobako-wasmtime` — the wasmtime implementation of that contract
#     (publishable rlib): `Driver` plus every engine-bound mechanic
#     (AOT cache, InstancePre, epoch timeout, ambient denial).

[workspace]
members = ["kobako", "kobako-codec", "kobako-runtime", "kobako-wasmtime"]
resolver = "2"
