# wasm/ sub-workspace.
#
# This `Cargo.toml` exists solely to group the wasm32-wasip1 member
# crates under a single workspace so they share a `target/` directory,
# `Cargo.lock`, and `[profile.release]` settings. The repo-root
# `Cargo.toml` explicitly excludes `wasm` (see the root manifest's
# `exclude = ["wasm", "vendor"]`), so this sub-workspace stays isolated
# from the host (`wasmtime`) dependency graph that lives there.
#
# Members
# -------
#   * `kobako-core` — Guest ABI contract crate (publishable rlib).
#     The mruby-free wire tiers a Guest Binary builds on.
#   * `kobako-wasm` — Guest Binary crate producing `kobako.wasm`. Owns
#     the mruby-tied ABI exports and the Ruby boot bytecode pipeline
#     (`mrblib/*.rb` precompiled to RITE via host `mrbc`). The typed
#     mruby wrapper comes from the published `beni` crate (extracted
#     from this repository); its `beni-sys` FFI layer consumes
#     `MRUBY_LIB_DIR` and `WASI_SDK_PATH`.
#
# The split keeps "the Guest ABI contract" (kobako-core) and "the
# assembled mruby guest" (kobako-wasm) in separate crates so each tier
# can evolve independently.

[workspace]
members = ["kobako-core", "kobako-wasm"]
resolver = "2"

[profile.release]
# wasm size hygiene applied to the cdylib member. Workspace-level so
# both members compile under the same release tuning if one of them
# ever grows a release-tested binary.
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
