# wasm/ sub-workspace.
#
# This `Cargo.toml` exists solely to group the wasm32-wasip1 member
# crates under a single workspace so they share a `target/` directory,
# `Cargo.lock`, and `[profile.release]` settings. The repo-root
# `Cargo.toml` explicitly excludes `wasm` (see the root manifest's
# `exclude = ["wasm", "vendor"]`), so this sub-workspace stays isolated
# from the host (`wasmtime`) dependency graph that lives there.
#
# Members
# -------
#   * `kobako-core` — Guest ABI contract crate (publishable rlib).
#     The mruby-free ABI machinery a Guest Binary builds on, over the
#     `crates/kobako-codec` wire tier (a cross-workspace path dep).
#   * `kobako` — assembled mruby implementation (publishable rlib):
#     the `MrbGuest` harness + the `KobakoBridge` built-in gem.
#   * `kobako-io` — sandbox IO / Kernel capability gem (publishable
#     rlib). Pure Rust over `beni`; kobako-free.
#   * `kobako-json` — sandbox JSON capability gem (publishable rlib).
#     Pure Rust over `beni`; kobako-free.
#   * `kobako-regexp` — sandbox Regexp / MatchData capability gem
#     (publishable rlib). Pure Rust over `beni`; kobako-free.
#   * `kobako-wasm` — leaf shell producing `kobako.wasm`; composes the
#     published crates and emits the wasm exports. The typed
#     mruby wrapper comes from the published `beni` crate (extracted
#     from this repository); its `beni-sys` FFI layer consumes
#     `MRUBY_LIB_DIR` and `WASI_SDK_PATH`.
#
# The split keeps each reason-to-change (ABI contract, assembled
# implementation, IO capability, bundled product) in its own crate.
#
# `kobako-baker/` sits beside the members but is NOT one: it is the
# host-side bake tool (publishable) carrying its own empty `[workspace]`
# table, which keeps wizer/wasmtime out of this wasm32 dependency graph.

[workspace]
members = ["kobako", "kobako-core", "kobako-io", "kobako-json", "kobako-regexp", "kobako-wasm"]
resolver = "2"

[profile.release]
# wasm size hygiene applied to the cdylib member. Workspace-level so
# both members compile under the same release tuning if one of them
# ever grows a release-tested binary.
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
