# kobako-wasmtime — the wasmtime implementation of the kobako runtime
# contract.
#
# The engine half of a kobako host: `Driver` implements
# `kobako_runtime::runtime::Runtime` over wasmtime, owning every
# engine-bound mechanic — the process-wide Engine + compiled-Module
# caches, the pre-linked `InstancePre`, the epoch wall-clock timeout,
# the linear-memory cap, and the frozen-clock / constant-RNG ambient
# denial. Frontends (the kobako Ruby gem's native ext) construct a
# `Driver` and drive invocations through the contract trait only.
#
# Self-contained by design: the Ruby gem ships this crate without the
# `crates/` workspace manifest, so no `workspace = true` inheritance
# fields may appear here.

[package]
name = "kobako-wasmtime"
version = "0.9.0"
edition = "2021"
description = "wasmtime implementation of the kobako host runtime contract."
license = "Apache-2.0"
repository = "https://github.com/elct9620/kobako"
readme = "README.md"
keywords = ["wasm", "mruby", "sandbox", "wasi", "wasmtime"]
categories = ["wasm", "virtualization"]

[dependencies]
# The engine-neutral contract this crate implements. The version pin
# rides the linked release group; the path keeps in-tree builds (and
# the Ruby gem, which ships both crates) resolving locally.
kobako-runtime = { version = "0.9.0", path = "../kobako-runtime" }
# wasmtime — host-side embedder for kobako.wasm. We disable default-features
# and opt back in only what kobako needs: a Cranelift-backed runtime that can
# compile a pre-built wasm32-wasip1 module on the host triple, plus the `wat`
# feature so test fixtures can be expressed as text.
# `cache` / `parallel-compilation` / `pooling` / `component-model` / `async`
# are intentionally off — kobako runs short-lived synchronous sandboxes.
wasmtime = { version = "46.0.1", default-features = false, features = [
    "cranelift",
    "runtime",
    "gc",
    "gc-drc",
    "addr2line",
    "demangle",
    "wat",
] }
# wasmtime-wasi provides WASI preview1 support for routing guest stdout/stderr
# into in-memory buffers. The `p1` feature enables the
# WasiCtxBuilder + preview1 adapter which wires fd 1/2 to pipes. We omit
# `p2` (component-model) and `p0`/`p3` (async) because kobako runs
# synchronous sandboxes only.
wasmtime-wasi = { version = "46.0.1", default-features = false, features = ["p1"] }
# sha2 keys the on-disk compiled-module cache by Guest Binary content
# (see cache.rs); a collision would load the wrong artifact, so the
# hash must be cryptographic.
sha2 = "0.11"

# libc supplies geteuid for the cache-directory ownership check gating
# the unsafe artifact deserialize (see cache.rs); std exposes a file's
# owner but not the process's effective uid.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
