# kobako — the Rust host SDK over the engine-neutral runtime contract.
#
# The bare-name crate a Rust embedder depends on: `Sandbox` composes
# the published tiers (`kobako-codec` wire, `kobako-runtime` contract,
# `kobako-wasmtime` driver) into the same host behavior contract the
# Ruby gem exposes — Service dispatch, capability Handles, snippet
# replay, seal-once registration. The Ruby-parity behavior surface is
# pinned by the differential harness under `test/parity/`.

[package]
name = "kobako"
version = "0.10.2"
edition = "2021"
# Recovering a concrete host object from `Sandbox::resolve` upcasts
# `Arc<dyn Receiver>` to `Arc<dyn Any>`, which needs trait-upcasting.
rust-version = "1.86"
description = "kobako host SDK — run untrusted mruby in an in-process Wasm sandbox."
license = "Apache-2.0"
repository = "https://github.com/elct9620/kobako"
readme = "README.md"
keywords = ["wasm", "mruby", "sandbox", "wasi"]
categories = ["wasm", "virtualization"]

[dependencies]
# Wire tier: value model, envelopes, and the Outcome the guest returns.
kobako-codec = { path = "../kobako-codec", version = "0.10.2" }

# Engine-neutral contract the Sandbox drives an engine through.
kobako-runtime = { path = "../kobako-runtime", version = "0.10.2" }

# Default engine: the wasmtime driver implementing the contract.
kobako-wasmtime = { path = "../kobako-wasmtime", version = "0.10.2" }
