# rust-host — assembling a kobako host in Rust directly on the
# published crates, without the Ruby gem: `kobako-wasmtime` drives a
# prebuilt Guest Binary behind the `kobako-runtime` contract, and
# `kobako-codec` encodes/decodes the SPEC wire the host side owns.
#
# Deliberately a standalone workspace (the empty `[workspace]` table
# below, the `kobako-baker` precedent): the example consumes the
# crates.io releases — the exact path a third-party embedder takes —
# so it must not join the repository's ext workspace or resolve the
# in-repo crates/ sources.

[package]
name = "kobako-rust-host"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
kobako-codec = "0.7"
kobako-runtime = "0.7"
kobako-wasmtime = "0.7"
