# wire-rs — a kobako host assembled by hand from the published wire
# crates, without the `kobako` SDK. It is the seam the SDK is built on,
# and the reference for a non-Rust frontend author who must drive the
# same SPEC wire in another language: `kobako-wasmtime` runs a prebuilt
# Guest Binary behind the engine-neutral `kobako-runtime` contract, and
# `kobako-codec` encodes and decodes the stdin frames going in and the
# Outcome bytes coming back.
#
# Standalone workspace (the empty `[workspace]` table) consuming the
# crates.io releases, the exact path a third-party embedder takes, so it
# builds from this directory alone and never joins the repository's ext
# workspace.

[package]
name = "kobako-wire-host"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
kobako-codec = "0.8"
kobako-runtime = "0.8"
kobako-wasmtime = "0.8"
