[package]
name = "kobako"
version = "0.2.0"
edition = "2021"
authors = ["Aotokitsuruya <contact@aotoki.me>"]
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8.2" }
# wasmtime — host-side embedder for kobako.wasm. We disable default-features
# and opt back in only what kobako needs: a Cranelift-backed runtime that can
# compile a pre-built wasm32-wasip1 module on the host triple, plus the `wat`
# feature
# so test fixtures can be expressed as text. WASI integration is layered on
# later via `wasmtime-wasi` once stdin/stdout wiring is needed (item #16).
# `cache` / `parallel-compilation` / `pooling` / `component-model` / `async`
# are intentionally off — kobako runs short-lived synchronous sandboxes.
wasmtime = { version = "44.0.1", default-features = false, features = [
    "cranelift",
    "runtime",
    "gc",
    "gc-drc",
    "addr2line",
    "demangle",
    "wat",
] }
# wasmtime-wasi provides WASI preview1 support for routing guest stdout/stderr
# into in-memory buffers (SPEC.md §B-04). The `p1` feature enables the
# WasiCtxBuilder + preview1 adapter which wires fd 1/2 to pipes. We omit
# `p2` (component-model) and `p0`/`p3` (async) because kobako runs
# synchronous sandboxes only.
wasmtime-wasi = { version = "44.0.1", default-features = false, features = ["p1"] }
