[package]
name = "kobako"
version = "0.11.1"
edition = "2021"
authors = ["Aotokitsuruya <contact@aotoki.me>"]
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8.2" }
# wasmtime — host-side embedder for kobako.wasm. We disable default-features
# and opt back in only what kobako needs: a Cranelift-backed runtime that can
# compile a pre-built wasm32-wasip1 module on the host triple, plus the `wat`
# feature so test fixtures can be expressed as text.
# `cache` / `parallel-compilation` / `pooling` / `component-model` / `async`
# are intentionally off — kobako runs short-lived synchronous sandboxes.
wasmtime = { version = "45.0.0", default-features = false, features = [
    "cranelift",
    "runtime",
    "gc",
    "gc-drc",
    "addr2line",
    "demangle",
    "wat",
] }
# wasmtime-wasi provides WASI preview1 support for routing guest stdout/stderr
# into in-memory buffers. The `p1` feature enables the
# WasiCtxBuilder + preview1 adapter which wires fd 1/2 to pipes. We omit
# `p2` (component-model) and `p0`/`p3` (async) because kobako runs
# synchronous sandboxes only.
wasmtime-wasi = { version = "45.0.0", default-features = false, features = ["p1"] }
# sha2 keys the on-disk compiled-module cache by Guest Binary content
# (see runtime/cache.rs); a collision would load the wrong artifact, so
# the hash must be cryptographic.
sha2 = "0.10"

# libc supplies geteuid for the cache-directory ownership check gating
# the unsafe artifact deserialize (see runtime/cache.rs); std exposes a
# file's owner but not the process's effective uid.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
