[package]
name = "kobako"
version = "0.19.0"
edition = "2021"
authors = ["Aotokitsuruya <contact@aotoki.me>"]
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8.2" }
# The engine-neutral host runtime contract plus its wasmtime driver —
# the ext is a thin magnus shim over them. Pure path dependencies: both
# crates ship inside the gem, so installs never resolve them against
# crates.io and the gem release cadence stays decoupled from theirs.
# wasmtime itself enters only through kobako-wasmtime; no engine type
# reaches this crate.
kobako-runtime = { path = "../../crates/kobako-runtime" }
kobako-wasmtime = { path = "../../crates/kobako-wasmtime" }
