# kobako-core — Guest ABI contract crate.
#
# The language-agnostic half of the guest: the ABI exports, stdin
# frame reader, and dispatch proxy a kobako Guest Binary needs, built
# on the portable wire tier (`kobako-codec`) and free of mruby so it
# compiles on every target. The assembled mruby guest (`kobako-wasm`,
# this workspace) consumes it as a path dependency; third-party guests
# consume the published crate.
#
# This crate is a plain rlib — it defines no `#[no_mangle]` symbol and
# no `cdylib` crate-type. Wasm exports belong to the leaf shell crate
# that links the final Guest Binary.

[package]
name = "kobako-core"
version = "0.6.1"
edition = "2021"
description = "Contract crate for kobako Guest Binaries — the Guest ABI exports and dispatch proxy over the kobako wire."
license = "Apache-2.0"
repository = "https://github.com/elct9620/kobako"
readme = "README.md"
keywords = ["wasm", "mruby", "sandbox", "wasi"]
categories = ["wasm"]

[dependencies]
# The portable wire tier — codec, envelopes, outcome — shared with any
# Rust host; this crate adds only the guest-bound ABI machinery on top.
kobako-codec = { version = "0.6.1", path = "../../crates/kobako-codec" }
